updating release URL

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,7 +15,7 @@
 	  <a href="/" class="btn">Home</a>
         <a href="https://github.com/demianturner/seagullframework" class="btn">View on GitHub</a>
       {% if site.show_downloads %}
-        <a href="https://github.com/demianturner/SeagullProject/releases/download/1.0.4/seagull-1.0.4.zip" class="btn">Download .zip</a>
+        <a href="https://github.com/demianturner/seagullframework/releases/latest" class="btn">Download</a>
         <!--a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a-->
       {% endif %}
     </section>
